feat: add contextual media imports
